# Maple

./: .gitignore  CMakeLists.txt  README.md
cmake/: KIncludeConfig.cmake  KMacroMessage.cmake  SparkDesktopMacros.cmake  SparkFindQt5Config.cmake  SparkInstallMacrosConfig.cmake  config.h.in  package-deb.descript
cmake/modules/: builtin.cmake  tools-extension-config.cmake
depends/: CMakeLists.txt
src/: CMakeLists.txt  application.h  mainwindow.cpp  mainwindow.h
src/core/actor/: actor.h  actorprocessor.cpp  actorprocessor.h
src/core/pluginsystem/: CMakeLists.txt  libary.cpp  libary.h  libaryloader.cpp  libaryloader.h  netloader.cpp  netloader.h  pluginconfig.cpp  pluginconfig.h  pluginmanager.cpp  pluginmanager.h  pluginservice.cpp  pluginservice.h  pluginwapper.cpp  pluginwapper.h  processloader.cpp  processloader.h  scriptloader.cpp  scriptloader.h
src/interface/: configure.h  iaction.h  iapplication.h  icontext.h  idocument.h  iextension.h  iinterface.h  iobject.h  ioption.h  iplugin.h  ipreference.h  itextdocument.h  iview.h
src/rustparser/: RustLexer.cpp  RustLexer.h  RustLexerBase.h  RustParser.cpp  RustParser.h  RustParserBase.h  RustParserBaseListener.cpp  RustParserBaseListener.h  RustParserBaseVisitor.cpp  RustParserBaseVisitor.h  RustParserListener.cpp  RustParserListener.h  RustParserVisitor.cpp  RustParserVisitor.h
src/widgets/: rusteditor.cpp  rusteditor.h
src/widgets/dockwidget/: DockAutoHideButton.h  DockingFrameStickers.h  DockingPaneContainer.h  DockingPaneFlyoutWidget.h  DockingPaneGlow.h  DockingPaneGlowWidget.h  DockingPaneManager.h  DockingPaneSplitterContainer.h  DockingPaneTabWidget.h  DockingPaneTabbedContainer.h  DockingPaneTitleWidget.h  DockingPanes_global.h  DockingTargetWidget.h  DockingToolButton.h
